--- a/index.html
+++ b/index.html
@@ -250,11 +250,14 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@article{luo2025autoodom,
-  author    = {Luo, Changsheng and Wang, Yushi and Cai, Wenhan and Zhao, Mingguo},
-  title     = {AutoOdom: Learning Auto-regressive Proprioceptive Odometry for Legged Locomotion},
-  journal   = {arXiv},
-  year      = {2025},
+    <pre><code>@misc{luo2025autoodomlearningautoregressiveproprioceptive,
+      title={AutoOdom: Learning Auto-regressive Proprioceptive Odometry for Legged Locomotion}, 
+      author={Changsheng Luo and Yushi Wang and Wenhan Cai and Mingguo Zhao},
+      year={2025},
+      eprint={2511.18857},
+      archivePrefix={arXiv},
+      primaryClass={cs.RO},
+      url={https://arxiv.org/abs/2511.18857}, 
 }</code></pre>
   </div>
 </section>
