--- a/index.html
+++ b/index.html
@@ -153,44 +153,169 @@
         </div>
 
         <div class="container">
-          <h3 class="title is-4 has-text-centered">Performance Comparison</h3>
+          <h3 class="title is-4 has-text-centered">Table I: Performance Comparison of Different Odometry Methods</h3>
+          <p class="has-text-centered is-size-6" style="margin-bottom: 1em;">Best results are highlighted in <span style="color: #d32f2f; font-weight: bold;">bold</span>.</p>
           <table class="table is-bordered is-striped is-narrow is-hoverable is-fullwidth">
             <thead>
               <tr>
+                <th style="text-align: center;">#</th>
                 <th>Method</th>
-                <th>$ATE_o$</th>
-                <th>$ATE_u$</th>
-                <th>RPE</th>
+                <th style="text-align: center;">$\text{ATE}_o$</th>
+                <th style="text-align: center;">$\text{ATE}_u$</th>
+                <th style="text-align: center;">RPE</th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <td>AutoOdom, Only Stage 1</td>
-                <td>0.8176</td>
-                <td>0.2165</td>
-                <td>0.0124</td>
+                <td style="text-align: center;">1</td>
+                <td>AutoOdom, Only Stage1</td>
+                <td style="text-align: center;">0.8176</td>
+                <td style="text-align: center;">0.2165</td>
+                <td style="text-align: center;">0.0124</td>
               </tr>
               <tr>
-                <td>AutoOdom, Only Stage 2</td>
-                <td>0.8016</td>
-                <td>0.3328</td>
-                <td>0.0185</td>
-              </tr>
-              <tr style="font-weight: bold; background-color: #f5f5f5;">
-                <td>AutoOdom (Proposed)</td>
-                <td>0.5630</td>
-                <td>0.2153</td>
-                <td>0.0148</td>
+                <td style="text-align: center;">2</td>
+                <td>AutoOdom, Only Stage1, LSTM</td>
+                <td style="text-align: center;">0.9457</td>
+                <td style="text-align: center;">0.3666</td>
+                <td style="text-align: center;">0.0221</td>
               </tr>
               <tr>
-                <td>Legolas (Baseline)</td>
-                <td>1.3153</td>
-                <td>0.5281</td>
-                <td>0.0232</td>
+                <td style="text-align: center;">4</td>
+                <td>AutoOdom, Only Stage2</td>
+                <td style="text-align: center;">0.8016</td>
+                <td style="text-align: center;">0.3328</td>
+                <td style="text-align: center;">0.0185</td>
+              </tr>
+              <tr>
+                <td style="text-align: center;">5</td>
+                <td>AutoOdom, Only Stage2, LSTM</td>
+                <td style="text-align: center;">0.6472</td>
+                <td style="text-align: center;">0.3404</td>
+                <td style="text-align: center;">0.0153</td>
+              </tr>
+              <tr style="font-weight: bold; background-color: #ffebee;">
+                <td style="text-align: center;">6</td>
+                <td>AutoOdom</td>
+                <td style="text-align: center; color: #d32f2f;">0.5630</td>
+                <td style="text-align: center; color: #d32f2f;">0.2153</td>
+                <td style="text-align: center; color: #d32f2f;">0.0148</td>
+              </tr>
+              <tr style="font-weight: bold; background-color: #ffebee;">
+                <td style="text-align: center;">7</td>
+                <td>AutoOdom, LSTM</td>
+                <td style="text-align: center; color: #d32f2f;">0.6196</td>
+                <td style="text-align: center; color: #d32f2f;">0.2544</td>
+                <td style="text-align: center; color: #d32f2f;">0.0153</td>
+              </tr>
+              <tr>
+                <td style="text-align: center;">8</td>
+                <td>Legolas</td>
+                <td style="text-align: center;">1.3153</td>
+                <td style="text-align: center;">0.5281</td>
+                <td style="text-align: center;">0.0232</td>
+              </tr>
+              <tr>
+                <td style="text-align: center;">9</td>
+                <td>AutoOdom, w/o accel</td>
+                <td style="text-align: center;">0.6861</td>
+                <td style="text-align: center;">0.2678</td>
+                <td style="text-align: center;">0.0162</td>
+              </tr>
+              <tr>
+                <td style="text-align: center;">10</td>
+                <td>AutoOdom, w/o autoregressive</td>
+                <td style="text-align: center;">0.7876</td>
+                <td style="text-align: center;">0.2095</td>
+                <td style="text-align: center;">0.0141</td>
               </tr>
             </tbody>
           </table>
-          <p class="is-size-7">Performance comparison of different odometry methods on our test dataset.</p>
+          <p class="is-size-7 has-text-centered" style="margin-top: 0.5em;">Performance comparison of different odometry methods. Best results are highlighted in bold.</p>
+        </div>
+
+        <!-- Table II: Ablation Study -->
+        <div class="container" style="margin-top: 3em;">
+          <h3 class="title is-4 has-text-centered">Table II: Ablation Study on Input Modalities and Configurations in Stage 1</h3>
+          <table class="table is-bordered is-striped is-narrow is-hoverable is-fullwidth">
+            <thead>
+              <tr>
+                <th style="text-align: center;">#</th>
+                <th style="text-align: center;">$\Delta t$</th>
+                <th style="text-align: center;">$a_t$</th>
+                <th style="text-align: center;">$p_t$</th>
+                <th style="text-align: center;">$A_t$</th>
+                <th style="text-align: center;">$\text{ATE}_o$</th>
+                <th style="text-align: center;">$\text{ATE}_u$</th>
+                <th style="text-align: center;">RPE</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td style="text-align: center;">1</td>
+                <td style="text-align: center;">0.02</td>
+                <td style="text-align: center;">✓</td>
+                <td style="text-align: center;">✓</td>
+                <td style="text-align: center;">✓</td>
+                <td style="text-align: center;">1.4486</td>
+                <td style="text-align: center;">0.6577</td>
+                <td style="text-align: center;">0.0378</td>
+              </tr>
+              <tr>
+                <td style="text-align: center;">2</td>
+                <td style="text-align: center;">0.02</td>
+                <td style="text-align: center;">✗</td>
+                <td style="text-align: center;">✓</td>
+                <td style="text-align: center;">✓</td>
+                <td style="text-align: center;">0.8176</td>
+                <td style="text-align: center;">0.2165</td>
+                <td style="text-align: center;">0.0124</td>
+              </tr>
+              <tr>
+                <td style="text-align: center;">3</td>
+                <td style="text-align: center;">0.02</td>
+                <td style="text-align: center;">✓</td>
+                <td style="text-align: center;">✗</td>
+                <td style="text-align: center;">✓</td>
+                <td style="text-align: center;">1.1113</td>
+                <td style="text-align: center;">0.4840</td>
+                <td style="text-align: center;">0.0280</td>
+              </tr>
+              <tr>
+                <td style="text-align: center;">4</td>
+                <td style="text-align: center;">0.02</td>
+                <td style="text-align: center;">✗</td>
+                <td style="text-align: center;">✗</td>
+                <td style="text-align: center;">✓</td>
+                <td style="text-align: center;">0.8876</td>
+                <td style="text-align: center;">0.2195</td>
+                <td style="text-align: center;">0.0141</td>
+              </tr>
+              <tr>
+                <td style="text-align: center;">5</td>
+                <td style="text-align: center;">0.02</td>
+                <td style="text-align: center;">✓</td>
+                <td style="text-align: center;">✓</td>
+                <td style="text-align: center;">✗</td>
+                <td style="text-align: center;">1.9190</td>
+                <td style="text-align: center;">0.6739</td>
+                <td style="text-align: center;">0.0439</td>
+              </tr>
+              <tr>
+                <td style="text-align: center;">6</td>
+                <td style="text-align: center;">1.02</td>
+                <td style="text-align: center;">✗</td>
+                <td style="text-align: center;">✓</td>
+                <td style="text-align: center;">✓</td>
+                <td style="text-align: center;">1.0831</td>
+                <td style="text-align: center;">0.4689</td>
+                <td style="text-align: center;">0.1551</td>
+              </tr>
+            </tbody>
+          </table>
+          <p class="is-size-7 has-text-centered" style="margin-top: 0.5em;">
+            Ablation study examining the impact of different input modalities ($a_t$: IMU acceleration, $p_t$: joint positions, $A_t$: action history) and time steps ($\Delta t$) on Stage 1 performance.
+          </p>
         </div>
         
         <div class="columns is-centered" style="margin-top: 2em;">
@@ -209,53 +334,6 @@
                 Qualitative results on complex trajectories with sharp turns and rectangular paths. AutoOdom (orange) shows superior alignment with the ground truth (blue) compared to the baseline (green).
               </p>
             </div>
-          </div>
-        </div>
-
-        <div class="container" style="margin-top: 3em;">
-          <h3 class="title is-4 has-text-centered">Ablation Study (Stage 1)</h3>
-          <table class="table is-bordered is-striped is-narrow is-hoverable is-fullwidth">
-            <thead>
-              <tr>
-                <th>$\Delta t$</th>
-                <th>Accel ($a_t$)</th>
-                <th>Pos ($p_t$)</th>
-                <th>Action ($A_t$)</th>
-                <th>$ATE_o$</th>
-                <th>$ATE_u$</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>0.02</td>
-                <td>✓</td>
-                <td>✓</td>
-                <td>✓</td>
-                <td>1.4486</td>
-                <td>0.6577</td>
-              </tr>
-              <tr style="font-weight: bold;">
-                <td>0.02</td>
-                <td>X</td>
-                <td>✓</td>
-                <td>✓</td>
-                <td>0.8176</td>
-                <td>0.2165</td>
-              </tr>
-              <tr>
-                <td>0.02</td>
-                <td>✓</td>
-                <td>✓</td>
-                <td>X</td>
-                <td>1.9190</td>
-                <td>0.6739</td>
-              </tr>
-            </tbody>
-          </table>
-          <div class="content has-text-justified">
-            <p>
-              Ablation studies reveal critical insights: excluding IMU acceleration during Stage 1 pre-training improves performance, while action history proves essential for accurate state estimation. These findings validated our systematic design choices for robust proprioceptive odometry. 
-            </p>
           </div>
         </div>
 
